# vempic

./: .projections.json  CMakeLists.txt  LICENSE  README.md
applications/: CMakeLists.txt
applications/three/: CMakeLists.txt
applications/three/fluidsim/: .projections.json  CMakeLists.txt
applications/three/fluidsim/include/vem/three/fluidsim/: cell.hpp  fluidvem.hpp  operator_cache.hpp  sim.hpp  sim_scene.hpp  sim_viewer.hpp
applications/three/fluidsim/src/: cell.cpp  fluidsim3_pressure_projection_check.cpp  fluidsim3_product_performance_test.cpp  fluidsim_3d.cpp  fluidsim_gui_example3.cpp  fluidvem.cpp  fluidvem3_cell.cpp  fluidvem3_function_projection.cpp  fluidvem_function_projection.cpp  operator_cache.cpp  sim.cpp  sim_advection.cpp  sim_buoyancy.cpp  sim_pressure.cpp  sim_scene.cpp  sim_viewer.cpp
applications/two/: CMakeLists.txt
applications/two/fluidsim/: CMakeLists.txt
applications/two/fluidsim/include/vem/fluidsim_2d/: fluidvem2.hpp  fluidvem2_cell.hpp  point_moment_fluidvem2.hpp  sim_scene.hpp
applications/two/fluidsim/include/vem/two/fluidsim/: cell.hpp  fluidvem.hpp  flux_moment_fluidvem.hpp  sim.hpp  sim_scene.hpp  sim_viewer.hpp
applications/two/fluidsim/src/: cell.cpp  fluidsim2_pressure_projection_check.cpp  fluidsim_2d.cpp  fluidsim_gui_example2.cpp  fluidvem.cpp  fluidvem2.cpp  fluidvem_function_projection.cpp  fulidvem_function_projection.cpp  sim.cpp  sim_advection.cpp  sim_buoyancy.cpp  sim_pressure.cpp  sim_scene.cpp  sim_serialization.cpp  sim_viewer.cpp
applications/two/poisson/: .projections.json  CMakeLists.txt
applications/two/poisson/include/vem/poisson_2d/: constraints.hpp  poisson_vem_cell.hpp
applications/two/poisson/include/vem/two/poisson/: cell.hpp  constraint_viewer.hpp  constraints.hpp  example_constraints.hpp  poisson.hpp
applications/two/poisson/src/: cell.cpp  constraint_viewer.cpp  constraints.cpp  example_constraints.cpp  poisson.cpp  poisson2_example.cpp  poisson_solution_viewer2.cpp  poisson_vem.cpp  poisson_vem_cell.cpp
applications/two/wavesim/: .projections.json  CMakeLists.txt
applications/two/wavesim/include/vem/two/wavesim/: sim.hpp  sim_viewer.hpp
applications/two/wavesim/src/: sim.cpp  sim_viewer.cpp  wavesim_gui_example2.cpp
cmake/: vem_fetch_dependencies.cmake
include/vem/: block_gram_structure.hpp  block_gram_structure.hpp~  cell.hpp  cell_normals.hpp  cheap_matrix.hpp  clang_hacks.hpp  creator3.hpp  dirichlet_block_gram_structure.hpp  dirichlet_block_gram_structure.hpp~  edge_lengths.hpp  flux_moment_cell3.hpp  from_grid.hpp  from_polygons.hpp~  from_simplicial_matrices.hpp~  from_tetrahedron3.hpp  gram_structure.hpp~  mesh.hpp  mesh.hpp~  moment_basis_indexer.hpp  moment_basis_indexer3.hpp  monomial_basis_indexer.hpp  monomial_basis_indexer_impl.hpp  monomial_basis_indexer_new.hpp  monomial_cell_integrals.hpp  monomial_cell_integrals.hpp~  monomial_face_integrals.hpp  monomial_field_embedder3.hpp  partitioned_coefficient_indexer.hpp  point_moment_cell.hpp  polygon_boundary_indices.hpp  polynomial_gradient.hpp~  polynomial_partial_derivative.hpp  polynomial_partial_derivative.hpp~  polynomial_product.hpp  polynomial_product.hpp~  polynomial_utils.hpp~  projection_constructor.hpp  schur_projector.hpp  schur_projector.hpp~  vem_mesh_viewer.hpp
inventory_viewer_2/: CMakeLists.txt
inventory_viewer_2/src/: main.cpp
src/: edge_lengths.cpp  monomial_basis_indexer.cpp  monomial_basis_indexer_new.cpp  monomial_cell_integrals.cpp  monomial_edge_integrals.cpp  monomial_face_integrals.cpp  normals.cpp  partitioned_coefficient_indexer.cpp  polygon_boundary_indices.cpp  polynomial_gradient.cpp  polynomial_partial_derivative.cpp  polynomial_product.cpp  polynomial_utils.cpp  rkhs_basis_indexer.cpp
src/polynomials/: gradient.cpp  partial_derivative.cpp  utils.cpp
src/serialization/: frame_inventory.cpp  inventory.cpp  prioritizing_inventory.cpp  serialize_eigen.cpp  (+4 more)
unmoved_files/examples/: CMakeLists.txt  check_in_triangle_predicate.cpp  fluidsim2_pressure_projection_check.cpp  fluidsim3_pressure_projection_check.cpp  fluidsim3_product_performance_test.cpp  fluidsim_2d.cpp  fluidsim_3d.cpp  fluidsim_gui_example2.cpp  flux_moment_example.cpp  flux_moment_example3.cpp  gradwavesim_gui_example2.cpp  load_grid_mesh.cpp  load_mandoline.cpp  load_mandoline3.cpp  load_single_polygon.cpp  load_triangle_mesh.cpp  make_collision_mesh3.cpp  moment_sample_reconstruction_experiment.cpp  moment_sample_reconstruction_experiment3.cpp  monomial_eval_test.cpp  monomial_integral_test.cpp  particle_grid_projection_loop.cpp  poisson2_example.cpp  poisson_solution_viewer2.cpp  test_creating_cutmesh.cpp  vector_field_reconstruction_test.cpp  wavesim_gui_example2.cpp
unmoved_files/fluidsim_3d/: CMakeLists.txt
unmoved_files/fluidsim_3d/include/vem/fluidsim_3d/: fluidvem3.hpp  sim_scene.hpp
unmoved_files/fluidsim_3d/src/: fluidvem3.cpp  sim.cpp  sim_advection.cpp  sim_serialization.cpp
unmoved_files/gradwavesim_2d/: CMakeLists.txt
unmoved_files/gradwavesim_2d/include/vem/gradwavesim_2d/: sim.hpp  sim_viewer.hpp
unmoved_files/gradwavesim_2d/src/: sim.cpp  sim_viewer.cpp
unmoved_files/vem_fluid_2d/: CMakeLists.txt  cutmesh2_to_vemmesh.cpp  cutmesh2_to_vemmesh.hpp  dirichlet_triangle_laplacian.h  diwlevin_vem_mesh2.cpp  diwlevin_vem_mesh2.hpp  interior_from_boundary.cpp  main.cpp  main_gl.cpp  pointwise_vem_mesh2.cpp  pointwise_vem_mesh2.hpp  pressure_solve_check.cpp  sim.cpp  sim.h  sim_vis.cpp  sim_vis.hpp  test_poly_grad.cpp  vem_mesh.cpp  vem_mesh.hpp  vem_mesh2.cpp  vem_mesh2.hpp  vem_mesh3.cpp  vem_mesh_interpolation2.hpp
unmoved_files/viewer/: CMakeLists.txt
unmoved_files/viewer/src/: main.cpp
unmoved_files/wavesim_2d/: CMakeLists.txt
unmoved_files/wavesim_2d/include/vem/wavesim_2d/: sim.hpp  sim_viewer.hpp
unmoved_files/wavesim_2d/src/: sim.cpp  sim_viewer.cpp
unmoved_files/wavesim_3d/: CMakeLists.txt
unmoved_files/wavesim_3d/include/vem/wavesim_3d/: sim.hpp  sim_scene.hpp  wavevem3.hpp
unmoved_files/wavesim_3d/src/: sim.cpp  sim_scene.cpp  sim_solver.cpp  wavevem3.cpp
(+209 files in other folders)
